--- a/authors.txt
+++ b/authors.txt
@@ -1,6 +1,6 @@
 Authors ordered by first contribution.
 
-Matthias Eilers (http://kuestenschmiede.de)
+Matthias Eilers (https://kuestenschmiede.de)
 Patrick Froch (https://easysolutionsit.de)
 Claudio Ross (https://kuestenschmiede.de)
 Raphael Ross (https://kuestenschmiede.de)
